--- a/HNSHOP/Views/Shared/_ProductListPartial.cshtml
+++ b/HNSHOP/Views/Shared/_ProductListPartial.cshtml
@@ -18,14 +18,25 @@
 
 
 
-						@if (User.Identity.IsAuthenticated && User.IsInRole("User"))
-						{
-							<!-- Chỉ tài khoản khách hàng mới có nút thêm vào giỏ -->
-							<button class="btn btn-default add-to-cart" data-product-id="@product.Id"
-									data-quantity="1">
-								<i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng
-							</button>
-						}
+							@if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+							{
+								if (product.Quantity > 0)
+								{
+									<button class="btn btn-default add-to-cart"
+											data-product-id="@product.Id"
+											data-quantity="1">
+										<i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng
+									</button>
+								}
+								else
+								{
+									<span class="btn btn-default disabled" style="opacity:0.7;">
+										<i class="fa"></i> Hết hàng
+									</span>
+									<br />
+								}
+							}
+
 					</div>
 				</div>
 
